# matrix-mcp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: audit.yml  ci.yml  docker.yml  release.yml
src/: main.rs  matrix.rs  server.rs
tests/e2e/: README.md  conftest.py  mcp_client.py  run.sh  test_auth.py  test_e2ee.py  test_messaging.py  test_protocol.py  test_rooms.py  test_transport.py
